added otp validation
